// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Submit job from local file handler should return correct message if the local file is submit successfully with wait option. 1`] = `
Object {
  "jobid": "jobid2",
  "jobname": "jobname2",
  "owner": "owner2",
  "rc": 0,
  "retcode": "RC 0000",
  "spoolFiles": Array [
    Object {
      "name": "file1",
    },
    Object {
      "name": "file2",
    },
  ],
  "status": "OUTPUT",
}
`;

exports[`Submit job from local file handler should return correct message if the local file is submit successfully with wait option. 2`] = `
Object {
  "fields": Array [
    "jobid",
    "jobname",
    "owner",
    "status",
    "rc",
    "retcode",
  ],
  "format": "object",
  "output": Object {
    "jobid": "jobid2",
    "jobname": "jobname2",
    "owner": "owner2",
    "rc": 0,
    "retcode": "RC 0000",
    "spoolFiles": Array [
      Object {
        "name": "file1",
      },
      Object {
        "name": "file2",
      },
    ],
    "status": "OUTPUT",
  },
}
`;

exports[`Submit job from local file handler should return correct message if the local file is submit successfully. 1`] = `
Array [
  Object {
    "jobid": "jobid1",
    "jobname": "jobname1",
    "spoolFiles": Array [
      Object {
        "name": "file1",
      },
      Object {
        "name": "file2",
      },
    ],
  },
]
`;

exports[`Submit job from local file handler should return correct message if the local file is submit successfully. 2`] = `
Array [
  Object {
    "fields": Array [
      "jobid",
      "jobname",
      "owner",
      "status",
    ],
    "format": "object",
    "output": Object {
      "jobid": "jobid1",
      "jobname": "jobname1",
      "spoolFiles": Array [
        Object {
          "name": "file1",
        },
        Object {
          "name": "file2",
        },
      ],
    },
  },
]
`;
